# LexxHard-MainBoard-Updator

./: .gitignore  Dockerfile  README.md  entrypoint.sh
catkin_ws/src/mainboard_updator/src/: mainboard_updator.cpp
release/: docker-compose.yml
src/mainboard_updator/: CMakeLists.txt  package.xml
src/mainboard_updator/src/: mainboard_updator.cpp
